--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,16 +21,9 @@ layout: default
     </div>
 
     <div class="sidenav">
-        <h2>Blog</h2>
+        <h2>Note</h2>
         <ul class="artical-list">
-        {% for post in site.categories.blog%}
-            <li><a href="{{ post.url }}">{{ post.title }}</a></li>
-        {% endfor %}
-        </ul>
-
-        <h2>Dump</h2>
-        <ul class="artical-list">
-        {% for post in site.categories.dump%}
+        {% for post in site.categories.note%}
             <li><a href="{{ post.url }}">{{ post.title }}</a></li>
         {% endfor %}
         </ul>
@@ -38,6 +31,13 @@ layout: default
         <h2>Project</h2>
         <ul class="artical-list">
         {% for post in site.categories.project%}
+            <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+        {% endfor %}
+        </ul>
+
+        <h2>Tourism</h2>
+        <ul class="artical-list">
+        {% for post in site.categories.tourism%}
             <li><a href="{{ post.url }}">{{ post.title }}</a></li>
         {% endfor %}
         </ul>
