--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@ layout: default
         body { background:#fff; }
     }
     @media screen and (max-width: 1020px){
-        body { background:#fff; }
+        body { background:#ffa; }
     }
 </style>
 
